events update albrecht page

--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -170,39 +170,24 @@
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
               <h4 class="quick-sum">Rating Explanation</h4>
               <h6 class="page-title">Douglas Albrecht</h6>
-              <p>          
-                Douglas Albrecht is the longest-serving member of the Cumberland County Board of Commissioners and remains one of the most accessible 
-                elected officials in the county. He attends GOP breakfasts, engages at public events, and has made himself available for multiple 
-                long-form interviews, including two hour-long radio discussions with InformTheVoteNJ. In those settings, he has gone well beyond surface 
-                talking points—explaining the details, challenges, and trade-offs behind major county projects.
-                <br>
-                <br>
-                In a county where the press has largely collapsed, that willingness to sit down and talk is more than many candidates offer. But it also 
-                raises the question: what would transparency look like if the status quo truly expected it? If voters could count on every candidate having 
-                a clear, detailed campaign site, or on there being an annual candidate forum that wasn’t a guessing game announced by chance, or on local 
-                press coverage that didn’t require someone like me to constantly chase people down with a camera and a mic? Like, perhaps monthly press 
-                conferences could compliment the Republicans only breakfasts, where a lot of what is discussed is simply a political update, not 
-                proprietary strategy.
-                <br>
-                <br>
-                Albrecht gives the sense that if such a system existed, he would participate fully. The groundwork is already there—he’s publicly engaged, 
-                has deep institutional knowledge, and is comfortable answering difficult questions. A truly comprehensive process might only require an 
-                additional couple of hours on his part: planning a two-hour podcast, jotting down thoughts on the full range of county issues, and letting 
-                someone else distill it into a written format for voters. That’s not a heavy lift for a candidate who already puts in significant work for 
-                the county. And remember, this is coming from the perspective of the goal of this site: find a way to put all the info in one place so voters 
-                don't have to go on a scavenger hunt.
-                <br>
-                <br>
-                As it stands, Albrecht is doing more than many of his peers to make himself available. But the reality is that Cumberland County voters 
-                would benefit from an environment where that level of engagement wasn’t exceptional—it was expected. Until then, his consistent accessibility 
-                and willingness to engage earn him an above-average transparency rating, with room to set a new standard if the political culture evolves to 
-                match his capacity.
-                
-                <br>
-                <br>
-                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
-
-              </p>
+                <p>
+                Douglas Albrecht remains the longest-serving member of the Cumberland County Board of Commissioners and one of the county’s most consistently accessible elected 
+                officials. Beyond attending GOP breakfasts and community events, he has repeatedly sat for long-form interviews—including two hour-long radio discussions and, 
+                more recently, an informal “man on the street” segment where he shared updates on county projects. In these settings he typically goes beyond surface talking 
+                points to explain the details, challenges, and trade-offs behind major initiatives.
+                <br><br>
+                That level of openness still stands out in a county where traditional press coverage has collapsed. But transparency is also a two-way street: local leaders can 
+                make themselves available, yet residents ultimately have to show up, listen, and vote. Public officials are busy—they can’t be everywhere all the time—and 
+                there’s a meaningful difference between casual appearances at fairs or food-truck festivals and a dedicated campaign event where voters get speeches, 
+                Q&amp;A sessions, and press time.
+                <br><br>
+                Albrecht gives the impression he would participate fully if a more robust civic-information system existed. He is already publicly engaged, has deep institutional 
+                knowledge, and is comfortable answering hard questions. With a little more structure—say, an annual forum or a two-hour podcast distilled into a written brief—his 
+                accessibility could set a new standard for Cumberland County. Until such a culture becomes the norm, his consistent willingness to engage earns him an above-average 
+                transparency rating.
+                <br><br>
+                Click the red x at the top of this box and then scroll down for more in-depth information and sources.
+                </p>
             </div>
         </dialog>
 
@@ -598,38 +583,10 @@
      <details>
         <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
 
-        <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
-                    <li class="description">If you're a Republican, get updates on politics from the local to national level, meet candidates and party members 
-                      , and have breakfast. $20 entry to pay for breakfast, it is not a party donation.
-                    </li>
-                    <li class="date-and-time">8/9/25</li>
-                    <li class="location">Greenview Inn at Eastlyn Golf Course, 4149 Italia Drive, Vineland, NJ 08361</li>
-                </ul>
-            </div>   
-
-        <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
-                    <li class="description">If you're a Republican, get updates on politics from the local to national level, meet candidates and party members 
-                      , and have breakfast. $20 entry to pay for breakfast, it is not a party donation.
-                    </li>
-                    <li class="date-and-time">8/23/25</li>
-                    <li class="location">Greenview Inn at Eastlyn Golf Course, 4149 Italia Drive, Vineland, NJ 08361</li>
-                </ul>
-            </div>   
-
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
-                    <li class="description">If you're a Republican, get updates on politics from the local to national level, meet candidates and party members 
-                      , and have breakfast. $20 entry to pay for breakfast, it is not a party donation.
-                    </li>
-                    <li class="date-and-time">9/6/25</li>
-                    <li class="location">Greenview Inn at Eastlyn Golf Course, 4149 Italia Drive, Vineland, NJ 08361</li>
-                </ul>
-            </div>   
+            <p>
+              With the recent change to the bi-weekly breakfast being for republicans only, voters and the press are left on a similar playing field to that of meeting local democrats:
+              campaign specific events are seemingly non-existent, with the status quo being to randomly bump into candidates at community events.
+            </p>
 
             <div class="event-card">
                 <ul class="event-info">
