--- a/child_pages/cc-elections/fairfield_township_committee.html
+++ b/child_pages/cc-elections/fairfield_township_committee.html
@@ -232,6 +232,25 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
+                    Fairfield Township voters will choose <strong>two Township Committee members</strong> in the upcoming election. 
+                    The race features <strong>incumbents Benjamin A. Byrd Sr. and Marvin R. Pierce Jr.</strong> running for re-election, 
+                    opposed by <strong>independent candidates Kenneth E. Brent and Darlington Henry</strong>.
+                </p>
+                <br>
+                <br>
+                <p>
+                    Byrd and Pierce currently sit on the Township Committee, with Pierce serving as Mayor. 
+                    Both have established roles in Fairfield’s local government and community.
+                </p>
+                <br>
+                <br>
+                <p>
+                    <em>Kenneth E. Brent</em> and <em>Darlington Henry</em> appear on the ballot as independents. 
+                    Publicly available information on their backgrounds and platforms is limited at this time; 
+                    we sent emails to the incumbents on August 25th with no response as of yet, and we plan on 
+                    attending the next township committee meeting on September 17th to make everyone aware of our 
+                    outreach efforts during public comments.
+                    InformTheVoteNJ is actively researching and will update this section as more details emerge.
                 </p>
             </details>
         </div>
