dixon jt burks video added

--- a/child_pages/cc-elections/Candidates/dixon.html
+++ b/child_pages/cc-elections/Candidates/dixon.html
@@ -540,6 +540,121 @@
                         </div>
                     </details>
                     </div>
+
+                    <div class="video-box-modal can-sec"> 
+                        <h3 class="video-heading">Dan Dixon on JT Burks’ “Run for Millville Commission Series” (Interview)</h3>
+
+                        <iframe src="https://www.youtube.com/embed/qc6ef0WCCsc?si=T1SKGKmy_bF9ERPK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                        <br>
+                        <br>
+
+                        <details>
+                            <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary>
+                            <br>
+                            <br>
+                            <div style="padding: 15px 25px; text-align: left;">
+                                <p><strong>Background &amp; community role:</strong> <em>Dan Dixon</em>—owner of Impact Fitness &amp; Martial Arts for ~20 years—coaches BJJ, sports performance, and personal training. A lifelong Millville resident (age 55), he returned to school later in life, finishing a bachelor’s and two master’s degrees in exercise science and clinical human performance, and is currently pursuing a PhD. He highlights mentoring youth and how jiu-jitsu helps students and adults with anxiety, confidence, and community.</p>
+
+                                <p><strong>Why he’s running:</strong> Dixon says Millville is at a turning point on public safety and neighborhood stability. He argues most residents want peace, while a relatively small group (~200–300 people) drives much of the disorder. His goal is that <em>everyone</em> feels safe enough to live, work, and invest in Millville—linking safety with economic revitalization on High Street and beyond.</p>
+
+                                <p><strong>Three-prong approach:</strong> (1) <em>Law enforcement pressure</em> on repeat offenders and open-air drug markets; (2) <em>Nuisance property enforcement</em> and landlord accountability to cool hot spots; (3) <em>Youth prevention</em> with community partners (like Coach JT) to reach kids before they choose the wrong path.</p>
+
+                                <p><strong>Homelessness &amp; downtown experience:</strong> Dixon stresses compassion and services for people who want help, while protecting customers and shop owners from harassment (e.g., panhandling during lunch). He wants clearer coordination with the county on outreach and shelter options, noting the tension between addiction, program rules, and public space impacts.</p>
+
+                                <p><strong>Governance style &amp; tone:</strong> He calls for less toxic Facebook politics and more direct, helpful communication (e.g., privately flagging filing issues). If elected, he wants the Commission to set a practical <em>30/60/90-day plan</em> and a 2-year horizon focused on measurable outcomes that improve residents’ daily lives.</p>
+
+                                <p><strong>Values &amp; pledge:</strong> Dixon cites the Golden Rule, parental role models, and “character education” in schools as cultural supports for safer neighborhoods. Politically, he’s a registered Republican who identifies as more libertarian (“freedom until it infringes on others’ rights”). He pledges to serve <em>one term (four years)</em> and step aside if he can’t show clear results.</p>
+                            </div>
+                        </details>
+
+                        <br>
+                        <br>
+
+                        <details>
+                            <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+                            <div class="video-summary" style="margin-top: 1em;">
+                                <h2>Interview Summary – Dan Dixon x JT Burks</h2>
+                                <p>This table highlights key sections of the conversation with main takeaways.</p>
+                                <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                                    <thead>
+                                        <tr>
+                                            <th style="text-align: left;">Timestamp</th>
+                                            <th style="text-align: left;">Topic</th>
+                                            <th style="text-align: left;">Key Takeaways</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>0:00</td>
+                                            <td>Intro</td>
+                                            <td>JT introduces the “Run for Millville Commission Series” and guest Dan Dixon.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>0:15</td>
+                                            <td>Background &amp; credentials</td>
+                                            <td>20 years running Impact Fitness; BJJ/MMA coaching; bachelor’s + two master’s in exercise science; pursuing PhD.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3:00</td>
+                                            <td>Mentoring youth</td>
+                                            <td>JT describes Dixon as a father-figure/mentor; Dixon hosts kids to experience jiu-jitsu and constructive activities.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>7:45</td>
+                                            <td>Why run &amp; safety focus</td>
+                                            <td>Millville at a turning point; a small group (~200–300) drives most problems; residents deserve safety and stability.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>12:10</td>
+                                            <td>Three-prong plan</td>
+                                            <td>Law enforcement on repeat offenders; nuisance-property enforcement; youth prevention via partners like JT.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>14:28</td>
+                                            <td>Downtown models</td>
+                                            <td>Example from Rome, GA: diverse, thriving downtown anchored by strict anti-crime posture—what Millville could be.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>16:02</td>
+                                            <td>Homelessness &amp; businesses</td>
+                                            <td>Balance compassion/services with safe customer experience (e.g., panhandling at lunch at El Guacamole).</td>
+                                        </tr>
+                                        <tr>
+                                            <td>18:05</td>
+                                            <td>Libertarian-leaning view</td>
+                                            <td>“Freedom until it infringes on others’ rights”; cites anti-camping ordinance and the need to protect storefronts.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>20:19</td>
+                                            <td>Civility over toxicity</td>
+                                            <td>Golden Rule; avoid Facebook gotchas—privately help candidates fix compliance instead of public call-outs.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>21:58</td>
+                                            <td>30/60/90-day planning</td>
+                                            <td>Commission should set concrete milestones and evaluate if actions tangibly improve daily life in Millville.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>26:00</td>
+                                            <td>Character education</td>
+                                            <td>Advocates values/character curricula to support parental gaps; cites research on crime reduction benefits.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>27:58</td>
+                                            <td>Results-first pledge</td>
+                                            <td>Results mindset from business; promises only one term if progress isn’t clear in four years.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>30:37</td>
+                                            <td>Closing</td>
+                                            <td>Mutual appreciation; call to vote; emphasis on shared responsibility and small actions (Golden Rule).</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </details>
+                        </div>
     </details>
 
     <br>
