ranello burks interview added

--- a/child_pages/cc-elections/Candidates/ranello.html
+++ b/child_pages/cc-elections/Candidates/ranello.html
@@ -259,7 +259,103 @@
          </div>
      </div>
 
-    <div class="title-info">
+     <details>
+            <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
+
+            <div class="video-box-modal can-sec"> 
+                <h3 class="video-heading">Marissa Ranello on JT Burks’ “Run for Millville Commission Series” (Interview)</h3>
+
+                <iframe src="https://www.youtube.com/embed/VIDEO_ID_HERE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                <br>
+                <br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary>
+                    <br>
+                    <br>
+                    <div style="padding: 15px 25px; text-align: left;">
+                        <p><strong>Background &amp; ties to Millville:</strong> <em>Marissa Ranello</em> has visited the area since childhood (1980s) and has lived in Millville ~10 years. She has a son in the public school system.</p>
+
+                        <p><strong>Perspective &amp; priorities:</strong> Originally from Staten Island, NY, Ranello says an “outsider” lens helps her focus on <em>present realities</em> rather than mourning the past. She wants in-progress projects to keep moving and emphasizes that “there’s a lot of work to do.”</p>
+
+                        <p><strong>Commission experience &amp; public safety:</strong> Served ~8 months on the City Commission (appointed, then special election). Highlights work on <em>lighting and safety</em>—arguing crime festers where conditions allow it (dark, dirty, neglected spaces). Public and officer safety are high priorities.</p>
+
+                        <p><strong>19 candidates &amp; functional government:</strong> The crowded field <em>encourages</em> her—it shows people care. She hopes voters choose five who can collaborate and stick with their seats for a full term. Advocates pragmatic <em>6-month/1-year/4-year</em> departmental plans and stability after years of turnover.</p>
+
+                        <p><strong>Clean, safe, educated—and market the city:</strong> Find common ground: clean streets, safe neighborhoods, strong schools, reasonable taxes. To attract business, <em>market Millville</em> better and clean it up. She cites a “Millville Means Business” video with very low views as a missed promotion opportunity.</p>
+
+                        <p><strong>Closing message:</strong> “<em>Stay.</em>” Don’t give up on Millville—plant “seeds of commonality,” pitch in, and grow with the community.</p>
+                    </div>
+                </details>
+
+                <br>
+                <br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+                    <div class="video-summary" style="margin-top: 1em;">
+                        <h2>Interview Summary – Marissa Ranello x JT Burks</h2>
+                        <p>This table highlights key sections of the conversation with main takeaways.</p>
+                        <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                            <thead>
+                                <tr>
+                                    <th style="text-align: left;">Timestamp</th>
+                                    <th style="text-align: left;">Topic</th>
+                                    <th style="text-align: left;">Key Takeaways</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>0:00</td>
+                                    <td>Intro &amp; roots</td>
+                                    <td>Visiting since the 1980s; ~10 years living in Millville; child in public schools.</td>
+                                </tr>
+                                <tr>
+                                    <td>0:45</td>
+                                    <td>Upbringing &amp; lens</td>
+                                    <td>Staten Island–born; not “mourning the past”—focus on present and future; keep active projects moving.</td>
+                                </tr>
+                                <tr>
+                                    <td>1:56</td>
+                                    <td>Commission service</td>
+                                    <td>Appointed for ~8 months; pushed lighting and public-safety improvements; crime thrives where conditions allow it.</td>
+                                </tr>
+                                <tr>
+                                    <td>3:06</td>
+                                    <td>19 candidates</td>
+                                    <td>Encouraged by the interest; wants 5 collaborators with 6-mo/1-yr/4-yr plans.</td>
+                                </tr>
+                                <tr>
+                                    <td>4:31</td>
+                                    <td>Functional government</td>
+                                    <td>Calls for stability after years of turnover; voters should pick people who will stay and work together.</td>
+                                </tr>
+                                <tr>
+                                    <td>6:23</td>
+                                    <td>Common goals</td>
+                                    <td>Cleanliness, safety, great education, reasonable taxes—shared “ground of commonality.”</td>
+                                </tr>
+                                <tr>
+                                    <td>7:59</td>
+                                    <td>Attracting business</td>
+                                    <td>Clean up and <em>market</em> the city; leverage social media to put Millville on the map.</td>
+                                </tr>
+                                <tr>
+                                    <td>8:58</td>
+                                    <td>Marketing gap</td>
+                                    <td>“Millville Means Business” promo has very low views—an example of under-marketing.</td>
+                                </tr>
+                                <tr>
+                                    <td>9:48</td>
+                                    <td>Closing inspiration</td>
+                                    <td>“Stay. Don’t leave.” Plant seeds, find common ground, and help the city grow together.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+        </details>
+    </details>
        
     <div class="candidate-agenda">
 
