ranello and dixon updates

--- a/child_pages/cc-elections/Candidates/dixon.html
+++ b/child_pages/cc-elections/Candidates/dixon.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
-        <script src="../../../app.js" async></script>
+        <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:type" content="website">
         <meta property="og:title" content="Candidate Dan Dixon">
@@ -133,7 +133,7 @@
         </div>
 
         
-        <dialog id="myModal" class="modal">
+        <dialog id="Modal1" class="modal">
 
             <!-- Modal content -->
             <div class="modal-content">
@@ -294,18 +294,7 @@
      <br>
      <br>
 
-    <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average (Trending Up)</h4>
-        <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
-
-        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
-    </div> 
-
-    <br>
-    <br>
-
-    <details>
+     <details>
             <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
 
             <div class="video-box-modal can-sec">
@@ -659,6 +648,19 @@
 
     <br>
     <br>
+
+    <div class="gauge-box">
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average (Trending Up)</h4>
+        <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
+
+        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
+        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+    </div> 
+
+    <br>
+    <br>
+
+    
 
     <details>
         <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
