ranello and dixon updates 2

--- a/child_pages/cc-elections/Candidates/ranello.html
+++ b/child_pages/cc-elections/Candidates/ranello.html
@@ -268,7 +268,25 @@
                  <!-- <a href="https://www.facebook.com/robert.austino/" target="_blank"><i class="fa-brands fa-square-facebook" style="color: blue"></i></a> -->
              </div>
 
-             <button class="quick-summary-reopen">quick candidate summary</button>
+             <!-- <button class="quick-summary-reopen">quick candidate summary</button> -->
+
+             <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                <p>
+                    Marissa Ranello first engaged with InformTheVoteNJ last year while running for Millville City Commission. At that time she was cooperative—answering our questionnaire and holding several phone conversations to clarify details.
+                </p>
+                <p>
+                    For the current campaign season, Ranello has again responded to our questionnaire, built a Facebook campaign page, and completed a 10-minute interview on J.T. Burks’ <em>The Race to Millville City Commission</em> series. These are all positive signals of continued transparency and accessibility.
+                </p>
+                <p>
+                    That said, there remain opportunities to further raise the status quo of county-wide campaign culture. Steps such as creating a self-made comprehensive campaign website, hosting well-advertised public appearances, and participating in more lengthy and in-depth interviews would give voters a fuller picture of her platform before casting their ballots.
+                </p>
+                <p>
+                    Click the red X at the top of this box and then scroll down for more in-depth information and sources.
+                </p>
+            </details>
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
@@ -296,7 +314,21 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+         <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            <p>
+                Marissa Ranello first engaged with InformTheVoteNJ last year while running for Millville City Commission. At that time she was cooperative—answering our questionnaire and holding several phone conversations to clarify details. For the current campaign season, she has again responded to our questionnaire, built a Facebook campaign page, and completed a 10-minute interview on J.T. Burks’ <em>The Race to Millville City Commission</em> series. These are all positive signals of continued transparency and accessibility.
+            </p>
+            <p>
+                That said, there remain opportunities to further raise the status quo of county-wide campaign culture. Steps such as creating a self-made comprehensive campaign website, hosting well-advertised public appearances, and participating in more lengthy and in-depth interviews would give voters a fuller picture of her platform before casting their ballots.
+            </p>
+            <p>
+                Overall, she’s on a positive trajectory—her existing efforts already place her a bit above the local status quo, and a few targeted moves could quickly elevate her into the top tier of candidate openness.
+            </p>
+            </details>
     </div> 
 
     <br>
