--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -159,6 +159,18 @@
 
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Gubernatorial Debate</strong></li>
+                    <li class="description">Ciatarelli and Sherrill debate for the first time of the season.
+                        <a href="https://newjerseyglobe.com/governor/sherrill-ciattarelli-meet-for-first-debate-on-sunday-sept-21/?fbclid=IwY2xjawMxly9leHRuA2FlbQIxMQBicmlkETE2elVHdVozalIzMVpGMFVsAR5DvjliDLR99z4-r323qvYmQV91DsD-Fcbh8uzZ7ZtYzHdcU80-SBqIjo5JCQ_aem_OoG0W278JaWc8VjM2JNDCQ">
+                        NJ Globe Article</a> 
+                    </li>
+                    <li class="date-and-time">9/21/25 7pm</li>
+                    <li class="location">Hosted on many platforms</li>
+                </ul>
+            </div>     
+
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Vote!</strong></li>
                     <li class="description">Go vote</li>
                     <li class="date-and-time">11/4/25</li>
